WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144937
[Mac] Hang in MediaPlayerPrivateAVFoundationObjC::audioSourceProvider() - 'tracks' property not yet loaded
https://bugs.webkit.org/show_bug.cgi?id=144937
Summary
[Mac] Hang in MediaPlayerPrivateAVFoundationObjC::audioSourceProvider() - 'tr...
Jer Noble
Reported
2015-05-12 16:40:39 PDT
[Mac] Hang in MediaPlayerPrivateAVFoundationObjC::audioSourceProvider() - 'tracks' property not yet loaded
Attachments
Patch
(4.50 KB, patch)
2015-05-12 16:58 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-05-12 16:57:47 PDT
<
rdar://problem/20887421
>
Jer Noble
Comment 2
2015-05-12 16:58:40 PDT
Created
attachment 252999
[details]
Patch
WebKit Commit Bot
Comment 3
2015-05-12 21:12:21 PDT
Comment on
attachment 252999
[details]
Patch Clearing flags on attachment: 252999 Committed
r184249
: <
http://trac.webkit.org/changeset/184249
>
WebKit Commit Bot
Comment 4
2015-05-12 21:12:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug